<resources>
    <string name="app_name">Superhero</string>
    <string name="intelligence">Intelligence</string>
    <string name="strength">Strength</string>
    <string name="speed">Speed</string>
    <string name="durability">Durability</string>
    <string name="power">Power</string>
    <string name="combat">Combat</string>
    <string name="search_superhero">Escribe el nombre de un superheroe y pulsa Buscar</string>
</resources>