<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.DetailSuperHeroActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgSuperhero"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:layout_marginHorizontal="@dimen/spacing_md"
        android:layout_marginTop="@dimen/spacing_lg"
        app:shapeAppearanceOverlay="@style/RoundedImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_md"
        android:layout_marginTop="@dimen/spacing_md"
        android:elevation="@dimen/spacing_sm"
        app:cardCornerRadius="@dimen/spacing_xl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSuperhero">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_sm"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSuperheroName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="Tony Vasquez"/>

            <TextView
                android:id="@+id/tvSuperheroRealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textStyle="italic"
                tools:text="Tony Vasquez"/>

            <TextView
                android:id="@+id/tvPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="11sp"
                tools:text="Tony Vasquez"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:gravity="bottom"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/viewIntelligence"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_intelligence"
                    android:layout_marginHorizontal="@dimen/spacing_xs"
                    android:layout_weight="1"/>

                <View
                    android:id="@+id/viewStrength"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_strength"
                    android:layout_marginHorizontal="@dimen/spacing_xs"
                    android:layout_weight="1"/>

                <View
                    android:id="@+id/viewSpeed"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_speed"
                    android:layout_marginHorizontal="@dimen/spacing_xs"
                    android:layout_weight="1"/>

                <View
                    android:id="@+id/viewDurability"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_durability"
                    android:layout_marginHorizontal="@dimen/spacing_xs"
                    android:layout_weight="1"/>

                <View
                    android:id="@+id/viewPower"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_power"
                    android:layout_marginHorizontal="@dimen/spacing_xs"
                    android:layout_weight="1"/>

                <View
                    android:id="@+id/viewCombat"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@color/superhero_stat_combat"
                    android:layout_marginHorizontal="@dimen/spacing_xs"
                    android:layout_weight="1"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_md"
                android:gravity="bottom"
                android:layout_marginTop="@dimen/spacing_xs"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_xs"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:text="@string/intelligence"
                    android:textSize="10sp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_xs"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:text="@string/strength"
                    android:textSize="10sp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_xs"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:text="@string/speed"
                    android:textSize="10sp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_xs"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:text="@string/durability"
                    android:textSize="10sp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_xs"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:text="@string/power"
                    android:textSize="10sp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_xs"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:text="@string/combat"
                    android:textSize="10sp"
                    android:layout_weight="1"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>